moldal-overlay class change

--- a/src/index.css
+++ b/src/index.css
@@ -205,7 +205,7 @@ Modal
   background: rgba(0, 0, 0, 0.5);
   display: grid;
   place-items: center;
-  transition: var(--transition);
+  /* transition: var(--transition); */
   visibility: hidden;
   z-index: -1;
 }
